<resources>
    <string name="app_name">LOL Professor</string>
    <string name="wl1">Game 1</string>
    <string name="wl2">Game 2</string>
    <string name="wl3">Game 3</string>
    <string name="champ1">Champion Game 1</string>
    <string name="champ2">Champion Game 2</string>
    <string name="champ3">Champion Game 3</string>
    <string name="kda1">Kils Game 1</string>
    <string name="kda2">Kills Game 2</string>
    <string name="kda3">Kills Game 3</string>
</resources>